--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
